force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic_Burndown_Item__c/agf__ADM_Epic_Burndown_Item__c.object-meta.xml
<CustomObject>
    <label>Epic Burndown Item</label>
    <nameField>
        <displayFormat>EBI-{0000000000}</displayFormat>
        <label>Epic Burndown Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epic Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>