force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic_Burndown_Item__c/fields/agf__Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Closed__c</fullName>
    <label>Closed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>