force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic_Burndown_Item__c/fields/agf__Epic__c.field-meta.xml
<CustomField>
    <fullName>agf__Epic__c</fullName>
    <label>Epic</label>
    <referenceTo>agf__ADM_Epic__c</referenceTo>
    <relationshipLabel>Epic Burndown Items</relationshipLabel>
    <relationshipName>Epic_Burndown_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>