force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic_Burndown_Item__c/fields/agf__Metric__c.field-meta.xml
<CustomField>
    <fullName>agf__Metric__c</fullName>
    <label>Metric</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>